[package]
name = "owostatus"
version = "0.1.0"
authors = ["Mariell Hoversholm <proximyst@proximyst.com>"]
edition = "2018"

[dependencies]
rocket = "^0.4"
rocket_contrib = { version = "^0.4", default-features = false, features = ["json"] }
reqwest = { version = "^0.9", default-features = false, features = ["rustls-tls"] }

serde = { version = "^1", features = ["derive", "rc"] }
serde_json = "^1"

failure = "^0.1"
exitfailure = "^0.5"
derive_more = "^0.15"

parking_lot = { version = "^0.8", features = ["serde"] }